fix vertical aligning

--- a/css/main.less
+++ b/css/main.less
@@ -472,10 +472,10 @@ a.i-skype-black:hover {
     .inline-block;
     width: 12px;
     height: 11px;
-    margin-top: 2px;
+    margin-top: 5px;
     background-image: url(../img/sprite-icons.png);
     background-position: -46px -106px;
-    vertical-align: middle;
+    // vertical-align: middle;
 }
 
 .i-arrow-down {
@@ -1746,7 +1746,8 @@ html[data-useragent*='MSIE 10.0'] .contacts-top  {
         }
 
         i {
-            vertical-align: text-top;
+            //vertical-align: text-top;
+            margin-top: 4px;
         }
 
        a {
@@ -2052,7 +2053,8 @@ html[data-useragent*='MSIE 10.0'] .contacts-top  {
         width: 6px;
         height: 13px;
         background-image: url(../img/sprite-icons.png);
-        vertical-align: text-top;
+        // vertical-align: text-top;
+        margin-top: 4px;
     }
 
     &:hover {
@@ -2157,7 +2159,8 @@ html[data-useragent*='MSIE 10.0'] .contacts-top  {
         width: 6px;
         height: 13px;
         background-image: url(../img/sprite-icons.png);
-        vertical-align: text-top;
+        margin-top: 5px;
+        // vertical-align: text-top;
     }
 }
 
@@ -2297,7 +2300,8 @@ html[data-useragent*='MSIE 10.0'] .contacts-top  {
         top: 32%;
 
         i {
-            vertical-align: text-top;
+            // vertical-align: text-top;
+            margin-top: 4px;
         }
     }
 
